add galery server methods
